--- a/frontend/src/Components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/Components/FoodDisplay/FoodDisplay.css
@@ -15,6 +15,13 @@
   margin-top: 20px;
 }
 
+@media (max-width:750px) {
+  .food-display-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
+  }
+}
+
 .food-item {
   border-radius: 10px;
   overflow: hidden;
